[tool.poetry]
name = "Telegrask"
version = "0.3.2"
description = "Flask-inspired Telegram bot micro framework for Python."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/samedamci/telegrask"
repository = "https://github.com/samedamci/telegrask"
keywords = ["flask-like", "framework", "library", "telegram", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
include = ["LICENSE", "telegrask/cli/templates/.gitignore"]

[tool.poetry.dependencies]
python = "^3.6"
python-telegram-bot = "^13.7"

[build-system]
requires = ["poetry_core>=1.0.3"]
build-backend = "poetry.core.masonry.api"
