[tool.poetry]
name = "Telegrask"
version = "0.0.0"
description = "Flask-inspired Telegram bot micro framework for Python."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
readme = "README.md"
homepage = "https://github.com/samedamci/telegrask"
repository = "https://github.com/samedamci/telegrask"
documentation = "http://telegrask.rtfd.io/"
keywords = ["flask-like", "framework", "library", "telegram", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
include = ["telegrask/cli/templates/.gitignore"]

[tool.poetry.dependencies]
python = "^3.6.2,<4.0"
python-telegram-bot = "^13.7"
Sphinx = { version = "^4.1.2", optional = true }

[tool.poetry.dev-dependencies]
rinohtype = "^0.5.3"
black = "^21.7b0"
flake8 = "^3.9.2"

[tool.poetry.scripts]
telegrask = "telegrask.cli:main"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__version__.py"]
